WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14618
REGRESSION(13464): drivehq.com login form doesn't work
https://bugs.webkit.org/show_bug.cgi?id=14618
Summary
REGRESSION(13464): drivehq.com login form doesn't work
Alexey Proskuryakov
Reported
2007-07-14 07:10:10 PDT
Steps to reproduce: 1) Open bug URL. 2) Enter you login and password (free registration required). 3) Press Enter or click Login button. Results: the login page reloads. This regressed in
r13464
, because the <input type="submit" value=""> no longer gets a default title, and WebKit doesn't serialize submits with empty values (I've tracked this code back to revision 4!). Thus, one of the expected parts is now missing from submitted request, which makes the site unhappy.
Attachments
proposed fix
(3.24 KB, patch)
2007-07-14 07:27 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-07-14 07:27:35 PDT
Created
attachment 15515
[details]
proposed fix
mitz
Comment 2
2007-07-14 07:36:27 PDT
Comment on
attachment 15515
[details]
proposed fix Is an HTTP test required?
Alexey Proskuryakov
Comment 3
2007-07-14 08:06:43 PDT
I think a local test can be made, similar to fast/forms/form-data-encoding.html - but an HTTP one is more straightforward. And as a side effect, it adds some coverage for POST code path.
Darin Adler
Comment 4
2007-07-14 09:52:23 PDT
Comment on
attachment 15515
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2007-07-14 11:05:32 PDT
Committed revision 24288.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug