        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14618
        REGRESSION(13464): drivehq.com login form doesn't work

        Test: http/tests/misc/post-submit-button.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::appendFormData): Append a submit even if its value is empty.



Canonical link: https://commits.webkit.org/18963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24288 268f45cc-cd09-0410-ab3c-d52691b4dbfc